--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: JavaScript Tutorial
 description: Learn JavaScript from scratch
 baseurl: "" 
-url: "https://MikeDanielX.github.io" # change to your GitHub Pages URL
+url: "https://mikedanielx.github.io" # change to your GitHub Pages URL
 
 theme: minima # we'll customize it
 plugins:
