--- a/.github/workflows/jekyll-build-deploy.yml
+++ b/.github/workflows/jekyll-build-deploy.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.x' # Use a Ruby version compatible with Jekyll 4.x and your Gemfile
+          ruby-version: '3.4.0' # Use a Ruby version compatible with Jekyll 4.x and your Gemfile
           bundler-cache: true # Installs gems from Gemfile.lock
 
       - name: Build Jekyll site
