--- a/.github/workflows/jekyll-build-deploy.yml
+++ b/.github/workflows/jekyll-build-deploy.yml
@@ -19,22 +19,19 @@ jobs:
           ruby-version: '3.4.0'
 
       - name: Install build dependencies
+        # Ensure build-essential is installed for compiling native extensions
         run: sudo apt-get update && sudo apt-get install -y build-essential
-        # This ensures compilers and development headers are available for native extensions.
 
-      - name: Clean RubyGems cache and installed gems (aggressive clean)
+      - name: Clean and Bundle Install (Force rebuild of all gems)
         run: |
-          gem pristine --all # Rebuilds all default and installed gems from their original state
-          rm -rf vendor/bundle || true # Remove existing bundled gems if any
-          bundle clean --force # Clean up unused gems from previous installations
-
-      - name: Bundle Install (Force Rebuild All Gems)
-        run: |
+          # Remove any previous bundle installation to ensure a completely fresh start
+          rm -rf vendor/bundle || true
+          # Configure specific gems to prevent them from using bundled pre-compiled compilers
           bundle config set --local build.sass-embedded "--disable-install-bundled-compiler"
           bundle config set --local build.google-protobuf "--disable-install-bundled-compiler"
+          # Perform a fresh bundle install, forcing re-installation and re-compilation of all gems.
+          # --full-index ensures Bundler checks the latest gem info, --jobs speeds it up, --retry handles transient network issues.
           bundle install --full-index --jobs 4 --retry 3 --force
-          # The --force flag here is on bundle install itself, which is more aggressive
-          # and should compel ALL gems, including native extensions, to be re-installed/re-compiled.
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
