--- a/.github/workflows/jekyll-build-deploy.yml
+++ b/.github/workflows/jekyll-build-deploy.yml
@@ -16,21 +16,30 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.4.0'
+          ruby-version: '3.4.0' # Keep this consistent with your development environment
 
       - name: Install build dependencies
-        # Ensure build-essential is installed for compiling native extensions
+        # Essential for compiling native Ruby gems from source, including transitive dependencies.
         run: sudo apt-get update && sudo apt-get install -y build-essential
 
-      - name: Clean and Bundle Install (Force rebuild of all gems)
+      - name: Clean and Bundle Install (Force Native Compilation)
         run: |
-          # Remove any previous bundle installation to ensure a completely fresh start
+          # Remove any previous bundle installation to ensure a completely fresh start.
           rm -rf vendor/bundle || true
-          # Configure specific gems to prevent them from using bundled pre-compiled compilers
+
+          # Configure sass-embedded to not use its bundled compiler,
+          # which can sometimes lead to issues with its protobuf dependency.
           bundle config set --local build.sass-embedded "--disable-install-bundled-compiler"
-          bundle config set --local build.google-protobuf "--disable-install-bundled-compiler"
-          # Perform a fresh bundle install, forcing re-installation and re-compilation of all gems.
-          # --full-index ensures Bundler checks the latest gem info, --jobs speeds it up, --retry handles transient network issues.
+
+          # IMPORTANT: Force google-protobuf to use system libraries and compile from source.
+          # This should prevent the 'undefined symbol: ruby_abi_version' error.
+          bundle config set --local build.google-protobuf "--with-system-libs"
+
+          # Perform a fresh bundle install.
+          # --full-index: Ensures Bundler checks the latest gem info.
+          # --jobs 4 --retry 3: For faster and more robust installation.
+          # --force: Crucially tells Bundler to re-download and re-install/re-compile all gems,
+          #          even if they appear to be present or cached. This is vital for native extensions.
           bundle install --full-index --jobs 4 --retry 3 --force
 
       - name: Build Jekyll site
