--- a/.github/workflows/jekyll-build-deploy.yml
+++ b/.github/workflows/jekyll-build-deploy.yml
@@ -16,11 +16,18 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.4.0' # Keep this consistent with your development environment
+          ruby-version: '3.4.0'
 
-      - name: Install build dependencies
-        # Essential for compiling native Ruby gems from source, including transitive dependencies.
-        run: sudo apt-get update && sudo apt-get install -y build-essential
+      - name: Install build dependencies and Protocol Buffers library
+        # Install compilers (build-essential) AND the Protocol Buffers development library (libprotobuf-dev)
+        # to ensure google-protobuf can compile its native extension correctly.
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y build-essential libprotobuf-dev
+
+      - name: Verify libprotobuf-dev installation (DEBUGGING)
+        # This step is for debugging to confirm libprotobuf-dev is actually installed.
+        run: dpkg -s libprotobuf-dev || echo "libprotobuf-dev not found, check previous step!"
 
       - name: Clean and Bundle Install (Force Native Compilation)
         run: |
@@ -28,19 +35,20 @@ jobs:
           rm -rf vendor/bundle || true
 
           # Configure sass-embedded to not use its bundled compiler,
-          # which can sometimes lead to issues with its protobuf dependency.
+          # as this can sometimes cause issues with its protobuf dependency.
           bundle config set --local build.sass-embedded "--disable-install-bundled-compiler"
 
-          # IMPORTANT: Force google-protobuf to use system libraries and compile from source.
-          # This should prevent the 'undefined symbol: ruby_abi_version' error.
+          # Explicitly tell google-protobuf to use system libraries for compilation.
+          # This, combined with `libprotobuf-dev` above, should ensure a correct build.
           bundle config set --local build.google-protobuf "--with-system-libs"
 
           # Perform a fresh bundle install.
           # --full-index: Ensures Bundler checks the latest gem info.
           # --jobs 4 --retry 3: For faster and more robust installation.
-          # --force: Crucially tells Bundler to re-download and re-install/re-compile all gems,
-          #          even if they appear to be present or cached. This is vital for native extensions.
-          bundle install --full-index --jobs 4 --retry 3 --force
+          # --redownload: This is the correct, modern equivalent of `--force`.
+          #               It crucially tells Bundler to re-download and re-install/re-compile all gems,
+          #               even if they appear to be present or cached. This is vital for native extensions.
+          bundle install --full-index --jobs 4 --retry 3 --redownload
 
       - name: Build Jekyll site
         run: bundle exec jekyll build
